--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,20 @@
+/* lato-regular - latin */
+@font-face {
+  font-family: 'Gotham';
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/Gotham-Rounded/Gotham-Rounded-Book/GothamRnd-Book.otf") format("truetype"); }
 body {
-  background: #e4e4e4; }
+  background: #e4e4e4;
+  font-family: 'Gotham'; }
+
+a {
+  text-decoration: none !important;
+  font-family: 'Gotham';
+  font-weight: lighter; }
+
+h1, h2, h3 {
+  line-height: 1.2; }
 
 .header {
   background: no-repeat url("../imgs/banner.jpg") 50%/100%;
@@ -21,12 +36,16 @@ body {
     position: absolute;
     top: 0;
     width: 100%;
-    padding: 60px 105px;
+    padding: 60px 120px;
     height: 100%;
     z-index: 1; }
   .header .nav-bar {
     display: inline-block;
-    width: 100%; }
+    transition: all 0.5s ease;
+    width: 100%;
+    position: fixed;
+    padding: 60px 120px;
+    z-index: 100; }
     .header .nav-bar .logo {
       height: 57px;
       float: left; }
@@ -38,14 +57,20 @@ body {
         display: inline;
         padding: 0 20px; }
         .header .nav-bar .nav-links li a {
-          color: white;
-          font-size: 21px; }
+          color: #fff;
+          font-size: 23px; }
         .header .nav-bar .nav-links li #join {
-          color: #ffd44c;
-          border: 2px solid #ffd44c;
+          color: #e9c046;
+          border: 2px solid #e9c046;
           border-radius: 15px;
-          padding: 10px 20px;
-          margin-left: 100px; }
+          padding: 15px 20px; }
+  .header .navbar-fixed {
+    padding: 10px 120px;
+    transition: all 0.5s ease;
+    z-index: 100;
+    background: rgba(70, 160, 160, 0.9);
+    position: fixed;
+    width: 100%; }
   .header .content {
     text-align: center;
     padding-top: 250px;
@@ -54,7 +79,7 @@ body {
       font-size: 62px; }
     .header .content h3 {
       margin-top: 80px;
-      font-size: 21px; }
+      font-size: 23px; }
     .header .content .btn-yellow {
       margin: 80px 0; }
     .header .content #down-arrow {
@@ -63,22 +88,33 @@ body {
         width: 31px; }
 
 .btn-yellow {
-  color: white;
+  color: #fff;
   background: #e9c046;
-  padding: 20px;
+  padding: 15px 20px;
   border-radius: 20px;
   display: inline-block;
-  text-decoration: none;
   text-transform: uppercase;
-  font-size: 17px; }
+  font-size: 19px;
+  letter-spacing: 1px;
+  font-weight: bold; }
 
 .retirement {
+  display: -webkit-flex;
   display: flex; }
   .retirement img {
-    flex: 1; }
+    flex: 1;
+    -webkit-flex: 1;
+    /* Safari 6.1+ */
+    -ms-flex: 1;
+    /* IE 10 */ }
 
 .sub-section {
   flex: 1;
+  -webkit-flex: 1;
+  /* Safari 6.1+ */
+  -ms-flex: 1;
+  /* IE 10 */
+  display: -webkit-flex;
   display: flex;
   align-items: center;
   justify-content: center; }
@@ -100,20 +136,24 @@ body {
     color: #4d4d4d; }
   .description p {
     margin: 40px 0 30px;
-    font-size: 18px;
+    font-size: 22px;
     color: #666666; }
 
 .gallery .wrapper {
-  padding: 145px 105px;
+  padding: 145px 150px;
   text-align: center; }
   .gallery .wrapper h2 {
     margin-bottom: 95px;
-    color: #4d4d4d; }
+    color: #4d4d4d;
+    font-size: 45px; }
   .gallery .wrapper p {
     margin: 39px 0 67px;
-    color: #666666; }
+    color: #666666;
+    font-size: 22px; }
+    .gallery .wrapper p .light {
+      color: #4d4d4d; }
   .gallery .wrapper .carousel .carousel-inner {
-    width: 80%;
+    width: 70%;
     margin: auto; }
   .gallery .wrapper .carousel .carousel-control {
     background: none; }
@@ -131,9 +171,8 @@ body {
         transform: translate(-100%, -50%); }
 
 .community {
+  display: -webkit-flex;
   display: flex; }
-  .community img {
-    flex: 1; }
   .community .sub-section {
     background: #bf4931; }
     .community .sub-section h2, .community .sub-section p {
@@ -143,32 +182,54 @@ body {
   text-align: center;
   padding: 148px 0;
   color: #4d4d4d; }
+  .connect ::-webkit-input-placeholder {
+    /* Chrome/Opera/Safari */
+    color: #666666;
+    font-size: 20px; }
+  .connect ::-moz-placeholder {
+    /* Firefox 19+ */
+    color: #666666;
+    font-size: 20px; }
+  .connect :-ms-input-placeholder {
+    /* IE 10+ */
+    color: #666666;
+    font-size: 20px; }
+  .connect :-moz-placeholder {
+    /* Firefox 18- */
+    color: #666666;
+    font-size: 20px; }
   .connect h3 {
-    font-size: 29px; }
+    font-size: 32px;
+    font-weight: bold; }
   .connect p {
     margin: 28px 0 48px;
-    font-size: 21px; }
+    font-size: 23px; }
   .connect .input-group {
     margin: 20px auto;
-    width: 620px; }
+    width: 515px; }
   .connect input {
     float: left; }
-    .connect input.btn.btn-lg, .connect input.btn.btn-lg:focus {
-      outline: none;
-      width: 75%;
-      height: 50px;
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0; }
+    .connect input.btn {
+      -webkit-user-select: initial; }
+      .connect input.btn.btn-lg, .connect input.btn.btn-lg:focus {
+        outline: none;
+        width: 75%;
+        height: 60px;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+        text-align: left; }
   .connect button.btn {
     width: 25%;
-    height: 50px;
+    height: 60px;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
     background: #e9c046;
-    color: white;
-    text-transform: uppercase; }
-  .connect .promise {
-    color: #999; }
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 2px; }
+  .connect .btn-lg {
+    border-radius: 15px; }
 
 .footer {
   background: #fff;
@@ -177,14 +238,18 @@ body {
     width: 143px;
     position: absolute;
     transform: translate(0, calc(-50%));
-    margin: 0 105px; }
+    margin: 0 120px; }
   .footer .wrapper {
-    padding: 80px 105px 160px; }
+    display: inline-block;
+    width: 100%;
+    padding: 80px 120px 160px; }
     .footer .wrapper ul {
-      list-style: none; }
+      list-style: none;
+      padding: 0; }
       .footer .wrapper ul a {
         color: #559897;
-        font-size: 18px; }
+        font-size: 20px;
+        line-height: 2; }
         .footer .wrapper ul a i {
           padding: 0 10px; }
   .footer .copyright {
@@ -193,3 +258,12 @@ body {
     text-align: center;
     color: #808080;
     font-size: 14px; }
+
+.section-image {
+  flex: 1;
+  -webkit-flex: 1;
+  /* Safari 6.1+ */
+  -ms-flex: 1;
+  /* IE 10 */ }
+  .section-image img {
+    width: 100%; }
