--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,33 @@
+@import "font";
+
+$mediumFontSize: 23px;
+
+$bodyBackground: #e4e4e4;
+$white: #fff;
+$orange: #e9c046;
+$darkred: #bf4931;
+$footerTextColor: #559897;
+$headerTextColor: #4d4d4d;
+$subTextColor: #666666;
+$subTextLightColor: #4d4d4d;
+$copyrightBackColor: #f2f2f2;
+$copyrightTextColor: #808080;
+
 body {
-	background: #e4e4e4;
+	background: $bodyBackground;
+	font-family: 'Gotham';
+}
+
+
+
+a {
+	text-decoration: none !important;
+	font-family: 'Gotham';
+	font-weight: lighter;
+}
+
+h1, h2, h3 {
+	line-height: 1.2;
 }
 
 .header {
@@ -27,89 +55,121 @@ body {
 		position: absolute;
 		top: 0;
 		width: 100%;
-		padding: 60px 105px;
+		padding: 60px 120px;
 		height: 100%;
 		z-index: 1;
 	}
 
 	.nav-bar {
 		display: inline-block;
+		transition: all 0.5s ease;
 		width: 100%;
+		position: fixed;
+		padding: 60px 120px;
+		z-index: 100;
+
 		.logo {
 			height: 57px;
 			float: left;
 		}
+
 		.nav-links {
 			float: right;
 			list-style: none;
 			line-height: 57px;
+
 			li {
 				display: inline;
 				padding: 0 20px;
+
 				a {
-					color: white;
-					font-size: 21px;
+					color: $white;
+					font-size: $mediumFontSize;
 				}
+
 				#join {
-					color: #ffd44c;
-					border: 2px solid #ffd44c;
+					color: $orange;
+					border: 2px solid $orange;
 					border-radius: 15px;
-					padding: 10px 20px;
-					margin-left: 100px;
+					padding: 15px 20px;
 				}						
 			}
 		}
 	}
 
+	.navbar-fixed {
+		padding: 10px 120px;
+		transition: all 0.5s ease;
+		z-index: 100;
+		background: rgba(70,160,160,0.9);
+		position: fixed;
+	    width: 100%;
+	}
+
 	.content {
 		text-align: center;
 		padding-top: 250px;
-		color: #fff;
+		color: $white;
+
 		h1 {
 			font-size: 62px;
 		}
+
 		h3 {
 			margin-top: 80px;
-			font-size: 21px;
+			font-size: $mediumFontSize;
 		}
+
 		.btn-yellow {
 			margin: 80px 0;
 		}
+
 		#down-arrow {
 			display: block;
+
 			img {
 				width: 31px;
 			}
 		}
 	}
 }
+
 .btn-yellow {
-	color: white;
-	background: #e9c046;
-	padding: 20px;
+	color: $white;
+	background: $orange;
+	padding: 15px 20px;
 	border-radius: 20px;
 	display: inline-block;
-	text-decoration: none;
 	text-transform: uppercase;
-	font-size: 17px;
+	font-size: 19px;
+	letter-spacing: 1px;
+	font-weight: bold;
 }
 
 .retirement {
-	display:flex;
+	display: -webkit-flex;
+    display: flex;
+
 	img {
 		flex: 1;
+		-webkit-flex: 1; /* Safari 6.1+ */
+	    -ms-flex: 1; /* IE 10 */ 
 	}
 }
 
 .sub-section {
 	flex: 1;
-	display: flex;
+	-webkit-flex: 1; /* Safari 6.1+ */
+    -ms-flex: 1; /* IE 10 */ 
+	display: -webkit-flex;
+    display: flex;
 	align-items: center;
 	justify-content: center;
 }
 
 .security {
 	position: relative;
+
 	img {
 		width: 100%;
 	}
@@ -117,6 +177,7 @@ body {
 	.description {
 		position: absolute;
 		top: 120px;
+
 		h2, p {
 			color: #fff;
 		}
@@ -125,49 +186,65 @@ body {
 
 .description {
 	padding: 0 120px;
+
 	h2{
 		font-size: 43px;
-		color: #4d4d4d;
+		color: $headerTextColor;
 	}
+
 	p {
 		margin: 40px 0 30px;
-		font-size: 18px;
-		color: #666666;
+		font-size: 22px;
+		color: $subTextColor;
 	}
 }
 
 .gallery {
 	.wrapper{
-		padding: 145px 105px;
+		padding: 145px 150px;
 		text-align: center;
+
 		h2 {
 			margin-bottom: 95px;
-			color: #4d4d4d;
+			color: $headerTextColor;
+			font-size: 45px;
 		}
+
 		p {
 			margin:39px 0 67px;
-			color: #666666;
+			color: $subTextColor;
+			font-size: 22px;
+			.light {
+				color: $subTextLightColor;
+			}
 		}
+
 		.carousel {
 			.carousel-inner {
-				width: 80%;
+				width: 70%;
 				margin: auto;
 			}
+
 			.carousel-control {
 				background: none;
+
 				img {
 					position: absolute;
 					top: 50%;
 					width: 65px;
 				}
+
 				&.left {
 					text-align: left;
+
 					img {
 						transform: translate(0, -50%);
 					}
 				}
+
 				&.right {
 					text-align: right;
+
 					img {
 						transform: translate(-100%, -50%);
 					}
@@ -178,88 +255,137 @@ body {
 }
 
 .community {
-	display: flex;
-	img {
-		flex: 1;
-	}
+	display: -webkit-flex;
+    display: flex;
+
 	.sub-section {
-		background: #bf4931;
+		background: $darkred;
+
 		h2, p {
-			color: #fff;
+			color: $white;
 		}
 	}
 }
 
 .connect {
+	::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+		color: $subTextColor;
+		font-size: 20px;
+	}
+	::-moz-placeholder { /* Firefox 19+ */
+		color: $subTextColor;
+		font-size: 20px;
+	}
+	:-ms-input-placeholder { /* IE 10+ */
+		color: $subTextColor;
+		font-size: 20px;
+	}
+	:-moz-placeholder { /* Firefox 18- */
+		color: $subTextColor;
+		font-size: 20px;
+	}
+
 	text-align: center;
 	padding: 148px 0;
-	color: #4d4d4d;
+	color: $headerTextColor;
+
 	h3 {
-		font-size: 29px;
+		font-size: 32px;
+		font-weight: bold;
 	}
+
 	p {
 		margin: 28px 0 48px;
-		font-size: 21px;
+		font-size: $mediumFontSize;
 	}
+
 	.input-group {
 	    margin: 20px auto;
-	    width: 620px;
+	    width: 515px;
 	}
+
 	input {
 		float: left;
+
 		&.btn {
+			-webkit-user-select: initial;
 			&.btn-lg, &.btn-lg:focus {
 				outline: none;
 			    width: 75%;
-			    height: 50px;
+			    height: 60px;
 			    border-top-right-radius: 0;
 			    border-bottom-right-radius: 0;	
+			    text-align: left;
 			}
 		}
 	}
+
 	button {
 		&.btn {
 			width: 25%;
-		    height: 50px;
+		    height: 60px;
 		    border-top-left-radius: 0;
 		    border-bottom-left-radius: 0;
-		    background: #e9c046;
-		    color: white;
+		    background: $orange;
+		    color: $white;
 		    text-transform: uppercase;
+		    font-weight: bold;
+		    letter-spacing: 2px;
 		}
 	}
-	.promise {
-	    color: #999;
+
+	.btn-lg {
+		border-radius: 15px;
 	}
 }
 
 .footer {
-	background: #fff;
+	background: $white;
 	position: relative;
+
 	.bg-logo {
 		width: 143px;
 		position: absolute;
 		transform: translate(0, calc(-50%));
-		margin: 0 105px;
+		margin: 0 120px;
 	}
+
 	.wrapper {
-		padding: 80px 105px 160px;
+		display: inline-block;
+		width: 100%;
+		padding: 80px 120px 160px;
+
 		ul {
 			list-style: none;
+			padding: 0;
+
 			a {
-				color: #559897;
-				font-size: 18px;
+				color: $footerTextColor;
+				font-size: 20px;
+				line-height: 2;
+
 				i {
 					padding: 0 10px;
 				}
 			}
 		}
 	}
+
 	.copyright {
-		background: #f2f2f2;
+		background: $copyrightBackColor;
 		padding: 37px 0;
 		text-align: center;
-		color: #808080;
+		color: $copyrightTextColor;
 		font-size: 14px;
 	}
+}
+
+.section-image {
+	flex: 1;
+	-webkit-flex: 1; /* Safari 6.1+ */
+    -ms-flex: 1; /* IE 10 */ 
+
+    img {
+    	width: 100%;
+    }
 }
