--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,13 @@ a {
 h1, h2, h3 {
   line-height: 1.2; }
 
+h2 {
+  font-size: 35px; }
+
 .header {
-  background: no-repeat url("../imgs/banner.jpg") 50%/100%;
-  position: relative; }
+  background: no-repeat url("../imgs/banner.jpg");
+  position: relative;
+  background-size: 100% 100%; }
   .header:after {
     content: "";
     background-color: rgba(16, 135, 133, 0.75);
@@ -33,12 +37,27 @@ h1, h2, h3 {
     width: 100%;
     opacity: 0; }
   .header .wrapper {
-    position: absolute;
+    position: relative;
     top: 0;
     width: 100%;
     padding: 0 90px;
     height: 100%;
     z-index: 1; }
+    .header .wrapper .content {
+      text-align: center;
+      color: #fff;
+      padding: 315px 0 106px; }
+      .header .wrapper .content h1 {
+        font-size: 50px; }
+      .header .wrapper .content h3 {
+        margin-top: 62px;
+        font-size: 18px; }
+      .header .wrapper .content .btn-yellow {
+        margin: 80px 0; }
+      .header .wrapper .content #down-arrow {
+        display: block; }
+        .header .wrapper .content #down-arrow img {
+          width: 26px; }
   .header .nav-bar {
     display: inline-block;
     transition: all 0.5s ease;
@@ -65,27 +84,12 @@ h1, h2, h3 {
           border-radius: 15px;
           padding: 15px 20px; }
   .header .navbar-fixed {
-    padding: 10px 120px;
+    padding: 10px 90px;
     transition: all 0.5s ease;
     z-index: 100;
     background: rgba(70, 160, 160, 0.9);
     position: fixed;
     width: 100%; }
-  .header .content {
-    text-align: center;
-    padding-top: 315px;
-    color: #fff; }
-    .header .content h1 {
-      font-size: 50px; }
-    .header .content h3 {
-      margin-top: 62px;
-      font-size: 18px; }
-    .header .content .btn-yellow {
-      margin: 80px 0; }
-    .header .content #down-arrow {
-      display: block; }
-      .header .content #down-arrow img {
-        width: 26px; }
 
 .btn-yellow {
   color: #fff;
@@ -94,7 +98,7 @@ h1, h2, h3 {
   border-radius: 20px;
   display: inline-block;
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: normalBtnFontsize;
   letter-spacing: 1px;
   font-weight: bold; }
 
@@ -132,7 +136,6 @@ h1, h2, h3 {
 .description {
   padding: 0 90px; }
   .description h2 {
-    font-size: 35px;
     color: #4d4d4d; }
   .description p {
     margin: 22px 0 55px;
@@ -144,8 +147,7 @@ h1, h2, h3 {
   text-align: center; }
   .gallery .wrapper h2 {
     margin-bottom: 95px;
-    color: #4d4d4d;
-    font-size: 35px; }
+    color: #4d4d4d; }
   .gallery .wrapper p {
     margin: 39px 0 67px;
     color: #666666;
@@ -235,7 +237,7 @@ h1, h2, h3 {
   background: #fff;
   position: relative; }
   .footer .bg-logo {
-    width: 143px;
+    width: 117px;
     position: absolute;
     transform: translate(0, calc(-50%));
     margin: 0 90px; }
@@ -267,3 +269,98 @@ h1, h2, h3 {
   /* IE 10 */ }
   .section-image img {
     width: 100%; }
+
+@media only screen and (max-width: 480px) {
+  .btn-yellow {
+    font-size: 12px; }
+
+  h2 {
+    font-size: 25px; }
+
+  .header {
+    background-size: auto 100%;
+    background-position: center; }
+    .header .nav-bar {
+      padding: 20px; }
+      .header .nav-bar .nav-links {
+        display: none; }
+    .header .wrapper {
+      padding: 20px;
+      position: relative; }
+      .header .wrapper .content {
+        padding: 100px 0;
+        transform: initial; }
+        .header .wrapper .content br {
+          display: none; }
+        .header .wrapper .content h1 {
+          font-size: 35px; }
+        .header .wrapper .content h3 {
+          margin-top: 25px;
+          font-size: 15px; }
+        .header .wrapper .content .btn-yellow {
+          margin: 30px; }
+
+  .community, .retirement {
+    display: initial; }
+
+  .security {
+    display: inline-block;
+    background: url("../imgs/security.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center; }
+    .security img {
+      display: none; }
+    .security .description {
+      position: relative;
+      top: 0; }
+
+  .description {
+    padding: 20px;
+    text-align: center; }
+    .description p {
+      font-size: 12px; }
+
+  .gallery .wrapper {
+    padding: 20px; }
+    .gallery .wrapper h2 {
+      margin-bottom: 50px; }
+    .gallery .wrapper p {
+      font-size: 12px;
+      margin: 20px 30px; }
+    .gallery .wrapper .carousel .carousel-control {
+      width: 10%; }
+      .gallery .wrapper .carousel .carousel-control img {
+        width: 90%; }
+    .gallery .wrapper .carousel .carousel-inner {
+      width: 80%; }
+
+  .connect {
+    padding: 50px 20px; }
+    .connect .input-group {
+      width: 100%; }
+    .connect h3 {
+      font-size: 18px; }
+    .connect p {
+      font-size: 15px; }
+    .connect ::-webkit-input-placeholder {
+      /* Chrome/Opera/Safari */
+      font-size: 12px; }
+    .connect ::-moz-placeholder {
+      /* Firefox 19+ */
+      font-size: 12px; }
+    .connect :-ms-input-placeholder {
+      /* IE 10+ */
+      font-size: 12px; }
+    .connect :-moz-placeholder {
+      /* Firefox 18- */
+      font-size: 12px; }
+    .connect .btn-lg {
+      font-size: 12px;
+      height: 40px !important; }
+
+  .footer .bg-logo {
+    margin: 0 20px;
+    width: 80px; }
+  .footer .wrapper {
+    padding: 60px 20px; } }
