--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ h2 {
       line-height: 47px; }
       .header .nav-bar .nav-links li {
         display: inline;
-        padding: 0 20px; }
+        padding: 0 10px; }
         .header .nav-bar .nav-links li a {
           color: #fff;
           font-size: 18px; }
@@ -270,20 +270,76 @@ h2 {
   .section-image img {
     width: 100%; }
 
-@media only screen and (max-width: 480px) {
-  .btn-yellow {
-    font-size: 12px; }
-
-  h2 {
-    font-size: 25px; }
-
+@media only screen and (max-width: 992px) {
   .header {
-    background-size: auto 100%;
-    background-position: center; }
+    background-size: auto 100%; }
     .header .nav-bar {
       padding: 20px; }
       .header .nav-bar .nav-links {
         display: none; }
+    .header .wrapper .content {
+      padding: 250px 0 80px; }
+
+  h2 {
+    font-size: 25px; }
+
+  .description {
+    padding: 0 20px; }
+    .description p {
+      font-size: 12px;
+      margin: 20px 0 40px; }
+
+  .gallery .wrapper {
+    padding: 50px;
+    padding: 20px; }
+    .gallery .wrapper h2 {
+      margin-bottom: 30px; }
+    .gallery .wrapper p {
+      margin: 20px 0 40px;
+      font-size: 15px; }
+    .gallery .wrapper .carousel .carousel-control {
+      width: 10%; }
+      .gallery .wrapper .carousel .carousel-control img {
+        width: 70%; }
+    .gallery .wrapper .carousel .carousel-inner {
+      width: 80%; }
+
+  .connect {
+    padding: 50px 0; }
+    .connect p {
+      margin: 20px 0 40px;
+      font-size: 15px; }
+    .connect h3 {
+      font-size: 18px; }
+    .connect ::-webkit-input-placeholder {
+      /* Chrome/Opera/Safari */
+      font-size: 12px; }
+    .connect ::-moz-placeholder {
+      /* Firefox 19+ */
+      font-size: 12px; }
+    .connect :-ms-input-placeholder {
+      /* IE 10+ */
+      font-size: 12px; }
+    .connect :-moz-placeholder {
+      /* Firefox 18- */
+      font-size: 12px; }
+    .connect .input-group {
+      width: 400px; }
+    .connect .btn-lg {
+      font-size: 12px;
+      height: 40px !important; }
+
+  .footer .bg-logo {
+    margin: 0 20px;
+    width: 80px; }
+  .footer .wrapper {
+    padding: 60px 20px; }
+
+  .btn-yellow {
+    font-size: 12px; } }
+@media only screen and (max-width: 480px) {
+  .header {
+    background-position: center; }
     .header .wrapper {
       padding: 20px;
       position: relative; }
@@ -318,49 +374,16 @@ h2 {
   .description {
     padding: 20px;
     text-align: center; }
-    .description p {
-      font-size: 12px; }
 
-  .gallery .wrapper {
-    padding: 20px; }
-    .gallery .wrapper h2 {
-      margin-bottom: 50px; }
-    .gallery .wrapper p {
-      font-size: 12px;
-      margin: 20px 30px; }
-    .gallery .wrapper .carousel .carousel-control {
-      width: 10%; }
-      .gallery .wrapper .carousel .carousel-control img {
-        width: 90%; }
-    .gallery .wrapper .carousel .carousel-inner {
-      width: 80%; }
+  .gallery .wrapper h2 {
+    margin-bottom: 50px; }
+  .gallery .wrapper p {
+    margin: 20px 30px; }
 
   .connect {
     padding: 50px 20px; }
     .connect .input-group {
       width: 100%; }
-    .connect h3 {
-      font-size: 18px; }
-    .connect p {
-      font-size: 15px; }
-    .connect ::-webkit-input-placeholder {
-      /* Chrome/Opera/Safari */
-      font-size: 12px; }
-    .connect ::-moz-placeholder {
-      /* Firefox 19+ */
-      font-size: 12px; }
-    .connect :-ms-input-placeholder {
-      /* IE 10+ */
-      font-size: 12px; }
-    .connect :-moz-placeholder {
-      /* Firefox 18- */
-      font-size: 12px; }
-    .connect .btn-lg {
-      font-size: 12px;
-      height: 40px !important; }
 
-  .footer .bg-logo {
-    margin: 0 20px;
-    width: 80px; }
   .footer .wrapper {
     padding: 60px 20px; } }
