--- a/scss/style.scss
+++ b/scss/style.scss
@@ -126,7 +126,7 @@ h2{
 
 			li {
 				display: inline;
-				padding: 0 20px;
+				padding: 0 10px;
 
 				a {
 					color: $white;
@@ -409,22 +409,101 @@ h2{
     }
 }
 
-@media only screen and (max-width : $screen-xs) {
-	.btn-yellow {
-		font-size: $mobileBtnFontsize;
-	}
-	h2 {
-		font-size: $mobile-h2;
-	}
+@media only screen and (max-width : $screen-md) {
 	.header {
 		background-size: auto 100%;
-	    background-position: center;
 		.nav-bar {
 			padding: $mobileGutter;
 			.nav-links {
 				display: none;
 			}
 		}
+		.wrapper {
+			.content {
+				padding: 250px 0 80px;
+			}
+		}
+	}
+	h2 {
+		font-size: $mobile-h2;
+	}
+	.description {
+		padding: 0 $mobileGutter;
+		p {
+			font-size: $mobileDescFontsize;
+			margin: 20px 0 40px;
+		}
+	}
+	.gallery {
+		.wrapper {
+			padding: 50px;
+			h2 {
+				margin-bottom: 30px;
+			}
+			p {
+				margin: 20px 0 40px;
+				font-size: $mobileBodyFontsize;
+			}
+			padding: $mobileGutter;
+			.carousel {
+				.carousel-control {
+					width: 10%;
+					img {
+						width: 70%;
+					}
+				}
+				.carousel-inner {
+					width: 80%;
+				}
+			}
+		}
+	}
+	.connect {
+		padding: 50px 0;
+		p {
+			margin: 20px 0 40px;
+			font-size: $mobileBodyFontsize;
+		}
+		h3 {
+			font-size: 18px;
+		}
+		::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+			font-size: 12px;
+		}
+		::-moz-placeholder { /* Firefox 19+ */
+			font-size: 12px;
+		}
+		:-ms-input-placeholder { /* IE 10+ */
+			font-size: 12px;
+		}
+		:-moz-placeholder { /* Firefox 18- */
+			font-size: 12px;
+		}
+		.input-group {
+			width: 400px;
+		}
+		.btn-lg {
+			font-size: 12px;
+			height: 40px !important;
+		}
+	}
+	.footer {
+		.bg-logo {
+			margin: 0 $mobileGutter;
+			width: 80px;
+		}
+		.wrapper {
+		    padding: 60px 20px;
+		}
+	}
+	.btn-yellow {
+		font-size: $mobileBtnFontsize;
+	}
+}
+
+@media only screen and (max-width : $screen-xs) {
+	.header {
+	    background-position: center;
 		.wrapper {
 			padding: $mobileGutter;
 			position: relative;
@@ -466,10 +545,7 @@ h2{
 	}
 	.description {
 		padding: $mobileGutter;
-		text-align: center;	
-		p {
-			font-size: $mobileDescFontsize;
-		}	
+		text-align: center;		
 	}
 	.gallery {
 		.wrapper {
@@ -477,20 +553,7 @@ h2{
 				margin-bottom: 50px;
 			}
 			p {
-				font-size: $mobileDescFontsize;
 				margin: 20px 30px;
-			}
-			padding: $mobileGutter;
-			.carousel {
-				.carousel-control {
-					width: 10%;
-					img {
-						width: 90%;
-					}
-				}
-				.carousel-inner {
-					width: 80%;
-				}
 			}
 		}
 	}
@@ -499,34 +562,9 @@ h2{
 		.input-group {
 			width: 100%;
 		}
-		h3 {
-			font-size: 18px;
-		}
-		p {
-			font-size: $mobileBodyFontsize;
-		}
-		::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-			font-size: 12px;
-		}
-		::-moz-placeholder { /* Firefox 19+ */
-			font-size: 12px;
-		}
-		:-ms-input-placeholder { /* IE 10+ */
-			font-size: 12px;
-		}
-		:-moz-placeholder { /* Firefox 18- */
-			font-size: 12px;
-		}
-		.btn-lg {
-			font-size: 12px;
-			height: 40px !important;
-		}
+		
 	}
 	.footer {
-		.bg-logo {
-			margin: 0 $mobileGutter;
-			width: 80px;
-		}
 		.wrapper {
 			padding: 60px $mobileGutter;
 		}
