--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,34 @@ body {
   background: #e4e4e4;
   font-family: 'Gotham'; }
 
+.content {
+  position: relative; }
+
+.panel {
+  position: fixed;
+  left: -15.625em;
+  /*left or right and the width of your navigation panel*/
+  width: 15.625em;
+  /*should match the above value*/
+  z-index: 300;
+  background: #e9c046; }
+  .panel .nav-links {
+    padding-top: 30px;
+    list-style: none;
+    line-height: 40px; }
+    .panel .nav-links li {
+      padding: 0 10px; }
+      .panel .nav-links li a {
+        color: #fff;
+        font-size: 18px; }
+
+.mobileNavigator {
+  line-height: 47px;
+  color: white;
+  font-size: 30px;
+  text-align: right;
+  display: none; }
+
 a {
   text-decoration: none !important;
   font-family: 'Gotham';
@@ -248,6 +276,8 @@ h3 {
     .footer .wrapper ul {
       list-style: none;
       padding: 0; }
+      .footer .wrapper ul li {
+        display: inline-block; }
       .footer .wrapper ul a {
         color: #559897;
         font-size: 15px;
@@ -271,27 +301,37 @@ h3 {
     width: 100%; }
 
 @media only screen and (max-width: 992px) {
+  .mobileNavigator {
+    display: block; }
+
   .header {
     background-size: auto 100%; }
     .header .nav-bar {
-      padding: 20px; }
+      padding: 30px; }
       .header .nav-bar .nav-links {
         display: none; }
     .header .wrapper .content {
-      padding: 250px 0 80px; }
+      padding: 150px 0 80px; }
+      .header .wrapper .content h1 {
+        font-size: 35px; }
+      .header .wrapper .content h2 {
+        margin-top: 25px;
+        font-size: 15px; }
+      .header .wrapper .content .btn-yellow {
+        margin: 30px; }
 
   h3 {
     font-size: 25px; }
 
   .description {
-    padding: 0 20px; }
+    padding: 0 30px; }
     .description p {
       font-size: 12px;
       margin: 20px 0 40px; }
 
   .gallery .wrapper {
     padding: 50px;
-    padding: 20px; }
+    padding: 30px; }
     .gallery .wrapper h3 {
       margin-bottom: 30px; }
     .gallery .wrapper p {
@@ -330,10 +370,12 @@ h3 {
       height: 40px !important; }
 
   .footer .bg-logo {
-    margin: 0 20px;
+    margin: 0 30px;
     width: 80px; }
   .footer .wrapper {
     padding: 60px 20px; }
+    .footer .wrapper ul li {
+      display: block; }
 
   .btn-yellow {
     font-size: 12px; } }
@@ -341,7 +383,7 @@ h3 {
   .header {
     background-position: center; }
     .header .wrapper {
-      padding: 20px;
+      padding: 30px;
       position: relative; }
       .header .wrapper .content {
         padding: 100px 0;
@@ -349,10 +391,10 @@ h3 {
         .header .wrapper .content br {
           display: none; }
         .header .wrapper .content h1 {
-          font-size: 35px; }
+          font-size: 40px; }
         .header .wrapper .content h2 {
           margin-top: 25px;
-          font-size: 15px; }
+          font-size: 16px; }
         .header .wrapper .content .btn-yellow {
           margin: 30px; }
 
@@ -372,7 +414,7 @@ h3 {
       top: 0; }
 
   .description {
-    padding: 20px;
+    padding: 30px;
     text-align: center; }
 
   .gallery .wrapper h3 {
@@ -381,9 +423,11 @@ h3 {
     margin: 20px 30px; }
 
   .connect {
-    padding: 50px 20px; }
+    padding: 50px 30px; }
     .connect .input-group {
       width: 100%; }
+    .connect .btn-lg {
+      padding: 5px; }
 
   .footer .wrapper {
-    padding: 60px 20px; } }
+    padding: 60px 30px; } }
