--- a/css/style.css
+++ b/css/style.css
@@ -93,9 +93,13 @@ h3 {
     position: fixed;
     padding: 54px 90px;
     z-index: 100; }
-    .header .nav-bar .logo {
-      height: 47px;
-      float: left; }
+    .header .nav-bar .nav-logo {
+      display: inline-block; }
+      .header .nav-bar .nav-logo span {
+        color: white;
+        font-size: 1.2em; }
+      .header .nav-bar .nav-logo .logo {
+        height: 47px; }
     .header .nav-bar .nav-links {
       float: right;
       list-style: none;
@@ -111,6 +115,9 @@ h3 {
           border: 2px solid #e9c046;
           border-radius: 15px;
           padding: 15px 20px; }
+    .header .nav-bar .menu-link {
+      display: inline-block;
+      float: right; }
   .header .navbar-fixed {
     padding: 10px 90px;
     transition: all 0.5s ease;
@@ -272,7 +279,7 @@ h3 {
   .footer .wrapper {
     display: inline-block;
     width: 100%;
-    padding: 60px 90px 136px; }
+    padding: 60px 90px 50px; }
     .footer .wrapper ul {
       list-style: none;
       padding: 0; }
@@ -305,7 +312,7 @@ h3 {
     display: block; }
 
   .header {
-    background-size: auto 100%; }
+    background-size: auto 130%; }
     .header .nav-bar {
       padding: 30px; }
       .header .nav-bar .nav-links {
