--- a/css/style.css
+++ b/css/style.css
@@ -283,14 +283,10 @@ h3 {
     .footer .wrapper ul {
       list-style: none;
       padding: 0; }
-      .footer .wrapper ul li {
-        display: inline-block; }
       .footer .wrapper ul a {
         color: #559897;
         font-size: 15px;
         line-height: 2; }
-        .footer .wrapper ul a i {
-          padding: 0 10px; }
   .footer .copyright {
     background: #f2f2f2;
     padding: 30px 0;
@@ -437,4 +433,5 @@ h3 {
       padding: 5px; }
 
   .footer .wrapper {
+    text-align: center;
     padding: 60px 30px; } }
