--- a/scss/style.scss
+++ b/scss/style.scss
@@ -421,17 +421,17 @@ h3{
 		ul {
 			list-style: none;
 			padding: 0;
-			li {
-				display: inline-block;
-			}
+			//li {
+			//	display: inline-block;
+			//}
 			a {
 				color: $footerTextColor;
 				font-size: 15px;
 				line-height: 2;
 
-				i {
-					padding: 0 10px;
-				}
+				//i {
+				//	padding: 0 10px;
+				//}
 			}
 		}
 	}
@@ -632,6 +632,7 @@ h3{
 	}
 	.footer {
 		.wrapper {
+			text-align: center;
 			padding: 60px $mobileGutter;
 		}
 	}
