--- a/scss/style.scss
+++ b/scss/style.scss
@@ -38,6 +38,10 @@ body {
   letter-spacing: .5px;
 }
 
+.btn-yellow {
+  border-width: 0;
+}
+
 .content {
   position: relative;
 }
@@ -65,7 +69,7 @@ body {
 .mobileNavigator {
   line-height: 47px;
   color: white;
-  font-size: 30px;
+  font-size: $normalBodyFontsize;
   text-align: right;
   display: none;
 }
@@ -83,65 +87,7 @@ h1, h2, h3 {
 h3{
   font-size: $normal-h3;
 }
-
-.header {
-  background: no-repeat url('../img/banner.jpg');
-  position: relative;
-  background-size: 100% 100%;
-
-  &:after {
-    content: "";
-    background-color: rgba(16,135,133,0.75);
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    display: block;
-    position: absolute;
-  }
-
-  #banner {
-    vertical-align: top;
-    width: 100%;
-    opacity: 0;
-  }
-
-  .wrapper {
-    position: relative;
-    top: 0;
-    width: 100%;
-    padding: 0 $normalGutter;
-    height: 100%;
-    z-index: 1;
-    .content {
-      text-align: center;
-      color: $white;
-      padding: 200px 0;
-
-      h1 {
-        font-size: 50px;
-      }
-
-      h2 {
-        margin-top: 62px;
-        font-size: $normalBodyFontsize;
-      }
-
-      .btn-yellow {
-        margin: 75px 0;
-      }
-
-      #down-arrow {
-        display: block;
-
-        img {
-          width: 26px;
-        }
-      }
-    }
-  }
-
-  .nav-bar {
+.nav-bar {
     display: inline-block;
     transition: all 0.5s ease;
     width: 100%;
@@ -178,7 +124,7 @@ h3{
           border: 2px solid $orange;
           border-radius: 15px;
           padding: 15px 20px;
-        }						
+        }
       }
     }
     .menu-link {
@@ -187,15 +133,62 @@ h3{
     }
   }
 
+.navbar-fixed {
+  padding: 10px $normalGutter;
+  transition: all 0.5s ease;
+  z-index: 100;
+  background: rgba(70,160,160,0.9);
+  position: fixed;
+  width: 100%;
+}
 
-  .navbar-fixed {
-    padding: 10px $normalGutter;
-    transition: all 0.5s ease;
-    z-index: 100;
-    background: rgba(70,160,160,0.9);
-    position: fixed;
-    width: 100%;
+.header {
+  background: no-repeat url('../img/banner.jpg');
+  position: relative;
+  background-size: cover;
+
+  &:after {
+    content: "";
+    background-color: rgba(16,135,133,0.75);
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    display: block;
+    position: absolute;
   }
+
+  .wrapper {
+    position: relative;
+    top: 0;
+    width: 100%;
+    padding: 0 $normalGutter;
+    height: 100%;
+    z-index: 1;
+    .content {
+      text-align: center;
+      color: $white;
+      padding: 220px 0;
+
+      h1 {
+        font-size: 50px;
+      }
+
+      h2 {
+        margin-top: 62px;
+        font-size: $normalBodyFontsize;
+      }
+
+      #down-arrow {
+        display: block;
+
+        img {
+          width: 26px;
+        }
+      }
+    }
+  }
+
 
   @media only screen and (max-width : $screen-lg) {
   }
@@ -208,12 +201,12 @@ h3{
   border-radius: 20px;
   display: inline-block;
   text-transform: uppercase;
-  font-size: normalBtnFontsize;
+  font-size: $normalBtnFontsize;
   letter-spacing: 1px;
   font-weight: normal;
 }
 
-.retirement {
+.about-section {
   display: -webkit-flex;
   display: flex;
 
@@ -475,7 +468,7 @@ h3{
     display: block;
   }
   .header {
-    background-size: auto 130%;
+    background-size: auto 165%;
     .nav-bar {
       padding: $mobileGutter;
       .nav-links {
@@ -653,3 +646,4 @@ h3{
     }
   }
 }
+
